src/assets/css/pages/_about.scss
@import '../abstracts/mixins.scss';
@import '../abstracts/variables.scss';
@import '../components/buttons.scss';
@import '../components/page_header.scss';

em {
  font-weight: 700;
}

.page-header {
  background: url('../../images/hero_images/about-hero.jpg');
  background-position: center;
  background-size: cover;
}

.firm-info {
  display: flex;
  flex-direction: column;
  max-width: 80%;

  @media screen and (min-width: $screen-xl-min) {
    flex-direction: row;

    .section-left {
      margin-right: 1rem;
    }

    .section-right {
      margin: 0 auto;
      align-self: center;
    }
  }
}

.about-img {
  width: 533px;
  height: 400px;
}


.bio {
  margin: 2rem auto;
  min-height: 100vh;
  display: grid;

  @media screen and (min-width: $screen-lg-min) {
    max-width: 80%;
    grid-template-columns: 0.5fr 0.5fr;
    text-align: left;
  }
}

.bio-h3 {
  text-align: center;
  font-size: 2em;
}

.bio-img {
  display: block;
  margin: 0 auto;
  max-height: 400px; 
  max-width: 300px;
  margin-bottom: 2rem;
}

.bio-content {
  @include top-bottom-trim;
}

#about-angela {
  background: $sectionbgcolor1;
}

#about-steven {
  background: $sectionbgcolor2;
}

